[package]
name = "debugger"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
rust-mcd = { path = "../rust-mcd" }
